# pdf-polish

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  app.py  cloudbuild.api.yaml  cloudbuild.frontend.yaml  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 74363508ce70_create_core_tables.py
app/: api_brevo_webhook.py  api_invoice.py  api_main.py  api_proposal.py  buildops_client.py  db.py  gmail_client.py  invoice_lookup.py  jobs_worker.py  models.py  s3_client.py  worker.py
app/email/: smtp_sender.py  template_router.py
app/email/templates/: generic.html  invoice.html  job_report.html  proposal.html  (+1 more)
app/security/: quote_response_token.py
app/services/: additional_documents.py  document_fields.py  keys.py  payment_link.py  pdf_stamp.py  proposal_service.py  service_quote_editor.py  snowflake.py  styling_service.py
app/storage/: s3_storage.py
app/styling/: __init__.py  base.py  router.py
app/web/: server.py
frontend/: .dockerignore  Dockerfile  nginx.conf
frontend/src/: App.tsx  MainApp.tsx  api.ts  main.tsx  styles.css  types.ts  uiLabels.ts
pdf_polish.egg-info/: PKG-INFO  SOURCES.txt
scripts/: backfill_styled_draft.py  debug_extract_words.py  debug_parse_service_quote.py  debug_template_acroform.py  dev_run_web.py  dev_run_worker.py  gmail_auth.py  gmail_watch.py  test_aws_access.py  test_buildops_client.py  test_invoice_mapper.py  test_invoice_render.py  test_render_proposal.py  test_render_service_quote.py  test_snowflake.py  test_style_templates.py
src/: api.ts
(+38 files in other folders)
